Quick fix - reload btn do index causando div-overflow

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -28,6 +28,7 @@
 #reload {
 	width: 35px;
 	height: 35px;
+	margin-right: 4px;
 }
 .spinner {
   animation: spin-animation 1s infinite;
